--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fake-progress": "^1.0.4",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lodash": "^4.17.21",
     "qrcode": "^1.5.3",
     "scss": "^0.2.4",
     "v-scale-screen": "^2.2.0",
