--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@micro-zoe/micro-app": "^0.8.10",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-resize-detector": "^1.2.4",
     "element-ui": "^2.15.13",
     "fake-progress": "^1.0.4",
