--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "element-resize-detector": "^1.2.4",
     "element-ui": "^2.15.13",
     "fake-progress": "^1.0.4",
+    "gsap": "^3.12.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lodash": "^4.17.21",
     "qrcode": "^1.5.3",
     "scss": "^0.2.4",
+    "table-excel": "^2.0.2",
     "v-scale-screen": "^2.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
