--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.15.13",
     "fake-progress": "^1.0.4",
     "gsap": "^3.12.1",
+    "kuan-vue-flip-clock": "^1.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lodash": "^4.17.21",
