--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@micro-zoe/micro-app": "^0.8.10",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.3",
     "@tinymce/tinymce-vue": "3.2.8",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
@@ -22,6 +23,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lodash": "^4.17.21",
+    "qiankun": "^2.10.11",
     "qrcode": "^1.5.3",
     "scss": "^0.2.4",
     "sortablejs": "^1.15.0",
@@ -47,7 +49,8 @@
     "sass-loader": "^12.0.0",
     "video.js": "^8.3.0",
     "vue-particles": "^1.0.9",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-dev-server": "^4.0.0-beta.1"
   },
   "eslintConfig": {
     "root": true,
