--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "echarts": "^5.4.2",
+    "echarts-gl": "^2.0.9",
     "element": "^0.1.4",
     "element-resize-detector": "^1.2.4",
     "element-ui": "^2.15.13",
@@ -29,6 +30,7 @@
     "sortablejs": "^1.15.0",
     "table-excel": "^2.0.2",
     "tinymce": "5.10.3",
+    "v-hotkey": "^0.9.0",
     "v-scale-screen": "^2.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
