--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lodash": "^4.17.21",
+    "pinyin-match": "^1.2.5",
     "qiankun": "^2.10.11",
     "qrcode": "^1.5.3",
     "scss": "^0.2.4",
@@ -36,6 +37,7 @@
     "v-scale-screen": "^2.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-seamless-scroll": "^1.1.23",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0",
