--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@micro-zoe/micro-app": "^0.8.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.3",
     "@tinymce/tinymce-vue": "3.2.8",
+    "autojs": "^1.0.2",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "echarts": "^5.4.2",
@@ -33,6 +34,7 @@
     "sortablejs": "^1.15.0",
     "table-excel": "^2.0.2",
     "tinymce": "5.10.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "v-hotkey": "^0.9.0",
     "v-scale-screen": "^2.2.0",
     "vue": "^2.6.14",
@@ -50,9 +52,11 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "file-loader": "^6.2.0",
     "mockjs": "^1.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "url-loader": "^4.1.1",
     "video.js": "^8.3.0",
     "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.14",
